
	* info/info-utils.c (deleted_lines): Variable deleted.  All
	accesses removed.
	(scan_node_contents): [preprocess-nodes=On] Remove blank line
	after "* Menu:" marker.
	* info/nodemenu.c (nodemenu_format_info): Add blank line after
	"* Menu:" marker.
	(get_visited_nodes): Add blank line at start of node to avoid first
	line being interpreted as a node information line.

2014-05-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_find_file): If full path to file has been given,
	look for a loaded file with that path exactly.
	(info_find_subfile): Check if subfile was loaded with file
	extensions added.
	(info_load_file): Don't retain reference to string argument.
	(get_filename_and_nodename): Use full path of file to follow
	references within a file.

2014-05-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_load_file): Function declared static.
	* info/info.c (main): Call info_find_file instead.

2014-05-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (all_files, main): all_files merged into main.
	(add_initial_nodes): Store full path of initial
	nodes instead of plain file name.
	(info_find_matching_files): Return type changed.

	* info/session.c (begin_multiple_window_info_session): Don't call
	initialize_info_session or display a welcome message.  Caller in
	main updated.

	* info/info.c (dirname): Delete unused.
	* info/session.c (dump_node_to_file): Delete unused.

2014-05-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (info_get_info_help_node): Don't split window
	to display Info tutorial.
	* info/session.c (begin_multiple_window_info_session): Unused
	variable removed.

2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (select_menu_digit): Return null if no menu.
	(info_menu_digit): Check if references field of node is null.
	(info_menu_or_ref_item): Abort if no references.
	(info_menu_item): Print error message if no references.
